@@ -170,16 +170,17 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL Android)
 else()
 
   # Locates the reference BLAS libraries in case the tests need to be compiled. The "FindclBLAS.cmake",
-  # "FindCBLAS.cmake" and "FindcuBLAS.cmake" are included.
+  # "FindCBLAS.cmake", "FindMKL.cmake", and "FindcuBLAS.cmake" are included.
   if(CLIENTS OR TESTS)
     find_package(CBLAS)
+    find_package(MKL)
     if(OPENCL)
       find_package(clBLAS)
     endif()
     if(CUBLAS)
       find_package(cuBLAS)
     endif()
-    if(NOT CLBLAS_FOUND AND NOT CBLAS_FOUND)
+    if(NOT CLBLAS_FOUND AND NOT CBLAS_FOUND AND NOT MKL_FOUND)
       if(TESTS)
         message(STATUS "Could NOT find clBLAS nor a CPU BLAS, disabling the compilation of the tests")
         set(TESTS OFF)
@@ -468,9 +469,19 @@ if(CLIENTS OR TESTS)
       add_definitions(" -DCLBLAST_REF_CLBLAS")
     endif()
   endif()
-  if(CBLAS_FOUND)
-    set(REF_INCLUDES ${REF_INCLUDES} ${CBLAS_INCLUDE_DIRS})
-    set(REF_LIBRARIES ${REF_LIBRARIES} ${CBLAS_LIBRARIES})
+  if(CBLAS_FOUND OR MKL_FOUND)
+    if(MKL_FOUND)  # prefers MKL over another CBLAS implementation
+      set(REF_INCLUDES ${REF_INCLUDES} ${MKL_INCLUDE_DIRS})
+      set(REF_LIBRARIES ${REF_LIBRARIES} ${MKL_LIBRARIES})
+      if(MSVC)
+        add_definitions(" /DCLBLAST_REF_CBLAS_MKL")
+      else()
+        add_definitions(" -DCLBLAST_REF_CBLAS_MKL")
+      endif()
+    else()
+      set(REF_INCLUDES ${REF_INCLUDES} ${CBLAS_INCLUDE_DIRS})
+      set(REF_LIBRARIES ${REF_LIBRARIES} ${CBLAS_LIBRARIES})
+    endif()
     set(WRAPPERS ${WRAPPERS} test/wrapper_cblas.hpp)
     if(MSVC)
       add_definitions(" /DCLBLAST_REF_CBLAS")
