@@ -48,7 +48,7 @@ mark_as_advanced(CBLAS_INCLUDE_DIRS)
 
 # Finds the library
 find_library(CBLAS_LIBRARIES
-  NAMES cblas blas mkl blis openblas accelerate
+  NAMES cblas blas blis openblas accelerate
   HINTS ${CBLAS_HINTS}
   PATH_SUFFIXES
     lib lib64 lib/x86_64 lib/x64 lib/x86 lib/Win32 lib/import lib64/import
